src/Week.css
:local(.component) {
  display: flex;
  flex-direction: column;
  max-height: 100%;
  width: 100%;
  border-bottom: 1px solid #ccc;
}

:local(.days),
:local(.header) {
  display: flex;
  align-items: flex-start;
}

:local(.daysWrapper) {
  position: relative;
  border-top: 1px solid #ccc;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
}

:local(.header) {
  padding-left: 30px;
  flex-shrink: 0;
}

:local(.lines) {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

:local(.hour) {
  border-bottom: 1px solid #dadfea;
  pointer-events: none;
}

:local(.halfHour) {
  height: 50%;
  border-bottom: 1px dashed #dadfea;
  pointer-events: none;
}

